# Clean-Architecture

./: .coveragerc  .env.example  .gitignore  Makefile  README.md  TESTING.md  alembic.ini  docker-compose.yaml  pyproject.toml  run_tests.sh
.github/workflows/: tests.yml
app/: lifespan.py  main.py
app/api/v1/: dependencies.py
app/api/v1/routers/: todo_router.py
app/application/todo/: dto.py  ports.py
app/application/todo/services/: todo_service.py
app/config/: settings.py
app/core/todo/: entities.py  exceptions.py
app/infrastructure/database/: base.py  engine.py
app/infrastructure/persistence/todo/: models.py  todo_repository.py
app/shared/: logging.py
migrations/: env.py
tests/: BEST_PRACTICES.md  README.md  __init__.py  conftest.py  pytest.ini
tests/e2e/: __init__.py  test_todo_api.py
tests/integration/: __init__.py  test_todo_repository.py
tests/unit/: __init__.py  test_todo_dto.py  test_todo_entity.py  test_todo_service.py
