[tool.poetry]
name = "todo-clean-arch"
version = "0.1.0"
description = "Production-ready Clean Architecture на FastAPI"
authors = ["Your Name <you@example.com>"]

packages = [
	{ include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = {version = "^2.0.35", extras = ["asyncio"]}
asyncpg = "^0.29.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
alembic = "^1.13.2"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.2"
faker = "^30.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"